--- a/scripts_analytical/2_2_analyse_shift.ipynb
+++ b/scripts_analytical/2_2_analyse_shift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,50 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#imports\n",
-    "import itertools\n",
     "import os\n",
+    "import yaml\n",
+    "import warnings\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import f1_score,roc_auc_score\n",
+    "from catboost import CatBoostClassifier\n",
     "import mlflow\n",
     "\n",
-    "from sklearn.model_selection import train_test_split,GridSearchCV,StratifiedKFold\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import f1_score,roc_auc_score,roc_curve,confusion_matrix, accuracy_score\n",
-    "from catboost import CatBoostClassifier\n",
+    "from callables import process_dataset,find_max_fscore\n",
     "\n",
-    "from callables import process_dataset,plot_roc_curve,find_max_fscore,plot_confusion_matrix,plot_feature_importnaces\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='s3://mlflow_project_bucket/artifacts/5', experiment_id='5', lifecycle_stage='active', name='trading_model_shift', tags={}>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = \"https://hb.bizmrg.com\"\n",
     "os.environ[\"MLFLOW_TRACKING_URI\"] = \"http://89.208.220.90:8000/\"\n",
-    "\n",
-    "mlflow.set_experiment(\"trading_model_shift\")"
+    "mlflow.set_experiment(\"trading_model_shift\")\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -67,17 +44,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#params\n",
+    "with open(\"params.yml\", 'r') as file:\n",
+    "    params = yaml.safe_load(file)\n",
+    "\n",
+    "root_path = params['root_path']\n",
     "shift_values = [-1*i for i in range (1, 10)]\n",
-    "anomaly_crtiretion = 1.0040\n",
-    "params = {\n",
-    "    'iterations': 300,\n",
-    "    'learning_rate': 0.03,\n",
-    "    'depth': 5,\n",
-    "    'l2_leaf_reg': 2,\n",
-    "    'rsm': 0.7,\n",
-    "    'verbose': False,\n",
-    "    'allow_writing_files': False,\n",
-    "    'random_state': 42}"
+    "anomaly_crtiretion = params['anomaly_crtiretion']\n",
+    "cb_params = params['cb_params']"
    ]
   },
   {
@@ -86,80 +60,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for shift in shift_values:\n",
+    "#callables\n",
+    "for shift in shift_values:\n",
     "\n",
-    "#     mlflow.start_run()\n",
+    "    mlflow.start_run()\n",
     "\n",
-    "#     #________________________________________________________________________\n",
+    "    #________________________________________________________________________\n",
     "\n",
-    "#     #read\n",
-    "#     df = pd.read_csv('./data/features.csv', index_col = 0)\n",
+    "    #read\n",
+    "    df = pd.read_csv(root_path + 'data/features.csv', index_col = 0)\n",
     "\n",
-    "#     #process\n",
-    "#     df_event, df_proc = process_dataset(df, shift, anomaly_crtiretion)\n",
+    "    #process\n",
+    "    df_event, df_proc = process_dataset(df, shift, anomaly_crtiretion)\n",
     "\n",
-    "#     #обучающая выборка\n",
-    "#     data = df_proc.drop(['t_start', 't_end'], axis = 1)\n",
+    "    #обучающая выборка\n",
+    "    data = df_proc.drop(['t_start', 't_end'], axis = 1)\n",
     "\n",
-    "#     #________________________________________________________________________\n",
+    "    #________________________________________________________________________\n",
     "\n",
-    "#     #split\n",
-    "#     train, test = train_test_split(data, test_size = 0.2, random_state = 42, shuffle = False)\n",
+    "    #split\n",
+    "    train, test = train_test_split(data, test_size = 0.2, random_state = 42, shuffle = False)\n",
     "\n",
-    "#     x_train = train.drop('target', axis = 1)\n",
-    "#     y_train = train.target.astype(int)\n",
+    "    x_train = train.drop('target', axis = 1)\n",
+    "    y_train = train.target.astype(int)\n",
     "\n",
-    "#     x_test = test.drop('target', axis = 1)\n",
-    "#     y_test = test.target.astype(int)\n",
+    "    x_test = test.drop('target', axis = 1)\n",
+    "    y_test = test.target.astype(int)\n",
     "\n",
-    "#     #fit best model\n",
-    "#     params = {\n",
-    "#         'iterations': 300,\n",
-    "#         'learning_rate': 0.03,\n",
-    "#         'depth': 5,\n",
-    "#         'l2_leaf_reg': 2,\n",
-    "#         'rsm': 0.7,\n",
-    "#         'verbose': False,\n",
-    "#         'allow_writing_files': False,\n",
-    "#         'random_state': 42\n",
-    "#     }\n",
-    "#     model = CatBoostClassifier(**params)\n",
-    "#     model.fit(x_train, y_train)\n",
+    "    #fit best model\n",
+    "    model = CatBoostClassifier(**cb_params)\n",
+    "    model.fit(x_train, y_train)\n",
     "\n",
-    "#     # predict train probabilities\n",
-    "#     y_train_pred_proba = model.predict_proba(x_train)\n",
-    "#     y_train_pred_proba = y_train_pred_proba[:, 1]\n",
+    "    # predict train probabilities\n",
+    "    y_train_pred_proba = model.predict_proba(x_train)\n",
+    "    y_train_pred_proba = y_train_pred_proba[:, 1]\n",
     "    \n",
-    "#     # predict test probabilities\n",
-    "#     y_test_pred_proba = model.predict_proba(x_test)\n",
-    "#     y_test_pred_proba = y_test_pred_proba[:, 1]\n",
+    "    # predict test probabilities\n",
+    "    y_test_pred_proba = model.predict_proba(x_test)\n",
+    "    y_test_pred_proba = y_test_pred_proba[:, 1]\n",
     "\n",
-    "#     #plot_find_max_fscore\n",
-    "#     opt_cutoff = find_max_fscore(y_test, y_test_pred_proba)\n",
+    "    #plot_find_max_fscore\n",
+    "    opt_cutoff = find_max_fscore(y_test, y_test_pred_proba)\n",
     "\n",
-    "#     #calculate metrics\n",
-    "#     gini_train = 2 * roc_auc_score(y_train, y_train_pred_proba) - 1\n",
-    "#     gini_test = 2 * roc_auc_score(y_test, y_test_pred_proba) - 1\n",
-    "#     f_score_train = f1_score(y_train, (y_train_pred_proba > opt_cutoff))\n",
-    "#     f_score_test  = f1_score(y_test , (y_test_pred_proba  > opt_cutoff))\n",
+    "    #calculate metrics\n",
+    "    gini_train = 2 * roc_auc_score(y_train, y_train_pred_proba) - 1\n",
+    "    gini_test = 2 * roc_auc_score(y_test, y_test_pred_proba) - 1\n",
+    "    f_score_train = f1_score(y_train, (y_train_pred_proba > opt_cutoff), pos_label=1, average='binary')\n",
+    "    f_score_test  = f1_score(y_test , (y_test_pred_proba  > opt_cutoff), pos_label=1, average='binary')\n",
     "\n",
-    "#     #________________________________________________________________________\n",
+    "    #________________________________________________________________________\n",
     "\n",
-    "#     # mlflow log params\n",
-    "#     mlflow.log_param(\"shift\", shift)\n",
-    "#     mlflow.log_param(\"anomaly_crtiretion\", anomaly_crtiretion)\n",
+    "    # mlflow log params\n",
+    "    mlflow.log_param(\"shift\", shift)\n",
+    "    mlflow.log_param(\"anomaly_crtiretion\", anomaly_crtiretion)\n",
     "\n",
-    "#     # mlflow log metrics\n",
-    "#     mlflow.log_metric(\"gini_train\", gini_train)\n",
-    "#     mlflow.log_metric(\"gini_test\", gini_test)\n",
-    "#     mlflow.log_metric(\"f_score_train\", f_score_train)\n",
-    "#     mlflow.log_metric(\"f_score_test\", f_score_test)\n",
+    "    # mlflow log metrics\n",
+    "    mlflow.log_metric(\"gini_train\", gini_train)\n",
+    "    mlflow.log_metric(\"gini_test\", gini_test)\n",
+    "    mlflow.log_metric(\"f_score_train\", f_score_train)\n",
+    "    mlflow.log_metric(\"f_score_test\", f_score_test)\n",
     "\n",
-    "#     #________________________________________________________________________\n",
+    "    #________________________________________________________________________\n",
     "\n",
-    "#     mlflow.end_run()\n",
+    "    mlflow.end_run()\n",
     "    \n",
-    "#     print(f'success_run_{shift}')"
+    "    print(f'success_run_{shift}')"
    ]
   }
  ],
