add features deltas, add volume per trade

--- a/scripts_analytical/2_2_analyse_shift.ipynb
+++ b/scripts_analytical/2_2_analyse_shift.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +32,22 @@
     "import os\n",
     "import yaml\n",
     "import warnings\n",
-    "\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score,roc_auc_score\n",
     "from catboost import CatBoostClassifier\n",
     "import mlflow\n",
-    "\n",
-    "from callables import process_dataset,find_max_fscore\n",
+    "from callables import prepare_dataset,process_dataset,find_max_fscore\n",
     "\n",
     "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = \"https://hb.bizmrg.com\"\n",
     "os.environ[\"MLFLOW_TRACKING_URI\"] = \"http://89.208.220.90:8000/\"\n",
-    "mlflow.set_experiment(\"trading_model_shift\")\n",
+    "mlflow.set_experiment(\"trading_model_b_shift_f_shift\")\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,82 +56,117 @@
     "    params = yaml.safe_load(file)\n",
     "\n",
     "root_path = params['root_path']\n",
-    "shift_values = [-1*i for i in range (1, 10)]\n",
+    "filepath_input = root_path+params['filepath_input']\n",
+    "\n",
+    "shift_backwards_values = range(1,50) #макисимальный shift назад - 12,5 секунд\n",
+    "shift_forward_values = range(1,50) #макисимальный shift вперед - 12,5 секунд\n",
+    "\n",
     "anomaly_crtiretion = params['anomaly_crtiretion']\n",
     "cb_params = params['cb_params']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Custom logger is already specified. Specify more than one logger at same time is not thread safe."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "success_run_back_1_frw_1\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-166-b179368d9ebb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;31m#fit best model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCatBoostClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mcb_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# predict train probabilities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/catboost/core.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, cat_features, text_features, embedding_features, sample_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, column_description, verbose_eval, metric_period, silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\u001b[0m\n\u001b[1;32m   4673\u001b[0m             \u001b[0mCatBoostClassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_is_compatible_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'loss_function'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4674\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4675\u001b[0;31m         self._fit(X, y, cat_features, text_features, embedding_features, None, sample_weight, None, None, None, None, baseline, use_best_model,\n\u001b[0m\u001b[1;32m   4676\u001b[0m                   \u001b[0meval_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogging_level\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumn_description\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose_eval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetric_period\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4677\u001b[0m                   silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/catboost/core.py\u001b[0m in \u001b[0;36m_fit\u001b[0;34m(self, X, y, cat_features, text_features, embedding_features, pairs, sample_weight, group_id, group_weight, subgroup_id, pairs_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, column_description, verbose_eval, metric_period, silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\u001b[0m\n\u001b[1;32m   1995\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mlog_fixup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_cout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_cerr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1996\u001b[0m             \u001b[0mplot_wrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0m_get_train_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1997\u001b[0;31m             self._train(\n\u001b[0m\u001b[1;32m   1998\u001b[0m                 \u001b[0mtrain_pool\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1999\u001b[0m                 \u001b[0mtrain_params\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"eval_sets\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/catboost/core.py\u001b[0m in \u001b[0;36m_train\u001b[0;34m(self, train_pool, test_pool, params, allow_clear_pool, init_model)\u001b[0m\n\u001b[1;32m   1426\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1427\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_pool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_pool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_clear_pool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minit_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1428\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_object\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_pool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_pool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_clear_pool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minit_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_object\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0minit_model\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1429\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_trained_model_attributes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoost._train\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoost._train\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "#callables\n",
-    "for shift in shift_values:\n",
+    "for shift_backwrd in shift_backwards_values:\n",
     "\n",
-    "    mlflow.start_run()\n",
+    "    for shift_frwrd in shift_forward_values:\n",
     "\n",
-    "    #________________________________________________________________________\n",
+    "        mlflow.start_run(run_name = f'b_{shift_backwrd}_f_{shift_frwrd}')\n",
+    "        \n",
+    "        #________________________________________________________________________\n",
     "\n",
-    "    #read\n",
-    "    df = pd.read_csv(root_path + 'data/features.csv', index_col = 0)\n",
+    "        #read\n",
+    "        df = prepare_dataset(filepath_input)\n",
     "\n",
-    "    #process\n",
-    "    df_event, df_proc = process_dataset(df, shift, anomaly_crtiretion)\n",
+    "        #process\n",
+    "        df_event, df_period, df_model = process_dataset(df, shift_backwrd ,shift_frwrd, anomaly_crtiretion)\n",
     "\n",
-    "    #обучающая выборка\n",
-    "    data = df_proc.drop(['t_start', 't_end'], axis = 1)\n",
+    "        #________________________________________________________________________\n",
     "\n",
-    "    #________________________________________________________________________\n",
+    "        #split\n",
+    "        train, test = train_test_split(df_model, test_size = 0.2, random_state = 42, shuffle = False)\n",
     "\n",
-    "    #split\n",
-    "    train, test = train_test_split(data, test_size = 0.2, random_state = 42, shuffle = False)\n",
+    "        x_train = train.drop('target', axis = 1)\n",
+    "        y_train = train.target.astype(int)\n",
     "\n",
-    "    x_train = train.drop('target', axis = 1)\n",
-    "    y_train = train.target.astype(int)\n",
+    "        x_test = test.drop('target', axis = 1)\n",
+    "        y_test = test.target.astype(int)\n",
     "\n",
-    "    x_test = test.drop('target', axis = 1)\n",
-    "    y_test = test.target.astype(int)\n",
+    "        #fit best model\n",
+    "        model = CatBoostClassifier(**cb_params)\n",
+    "        model.fit(x_train, y_train)\n",
     "\n",
-    "    #fit best model\n",
-    "    model = CatBoostClassifier(**cb_params)\n",
-    "    model.fit(x_train, y_train)\n",
+    "        # predict train probabilities\n",
+    "        y_train_pred_proba = model.predict_proba(x_train)\n",
+    "        y_train_pred_proba = y_train_pred_proba[:, 1]\n",
+    "        \n",
+    "        # predict test probabilities\n",
+    "        y_test_pred_proba = model.predict_proba(x_test)\n",
+    "        y_test_pred_proba = y_test_pred_proba[:, 1]\n",
     "\n",
-    "    # predict train probabilities\n",
-    "    y_train_pred_proba = model.predict_proba(x_train)\n",
-    "    y_train_pred_proba = y_train_pred_proba[:, 1]\n",
-    "    \n",
-    "    # predict test probabilities\n",
-    "    y_test_pred_proba = model.predict_proba(x_test)\n",
-    "    y_test_pred_proba = y_test_pred_proba[:, 1]\n",
+    "        #plot_find_max_fscore\n",
+    "        opt_cutoff = find_max_fscore(y_test, y_test_pred_proba)\n",
     "\n",
-    "    #plot_find_max_fscore\n",
-    "    opt_cutoff = find_max_fscore(y_test, y_test_pred_proba)\n",
+    "        #calculate metrics\n",
+    "        gini_train = 2 * roc_auc_score(y_train, y_train_pred_proba) - 1\n",
+    "        gini_test = 2 * roc_auc_score(y_test, y_test_pred_proba) - 1\n",
+    "        f_score_train = f1_score(y_train, (y_train_pred_proba > opt_cutoff), pos_label=1, average='binary')\n",
+    "        f_score_test  = f1_score(y_test , (y_test_pred_proba  > opt_cutoff), pos_label=1, average='binary')\n",
     "\n",
-    "    #calculate metrics\n",
-    "    gini_train = 2 * roc_auc_score(y_train, y_train_pred_proba) - 1\n",
-    "    gini_test = 2 * roc_auc_score(y_test, y_test_pred_proba) - 1\n",
-    "    f_score_train = f1_score(y_train, (y_train_pred_proba > opt_cutoff), pos_label=1, average='binary')\n",
-    "    f_score_test  = f1_score(y_test , (y_test_pred_proba  > opt_cutoff), pos_label=1, average='binary')\n",
+    "        #________________________________________________________________________\n",
     "\n",
-    "    #________________________________________________________________________\n",
+    "        # mlflow log params\n",
+    "        mlflow.log_param(\"shift_bckwrd\", shift_backwrd)\n",
+    "        mlflow.log_param(\"shift_frwrd\", shift_frwrd)\n",
+    "        mlflow.log_param(\"anomaly_crtiretion\", anomaly_crtiretion)\n",
     "\n",
-    "    # mlflow log params\n",
-    "    mlflow.log_param(\"shift\", shift)\n",
-    "    mlflow.log_param(\"anomaly_crtiretion\", anomaly_crtiretion)\n",
+    "        # mlflow log metrics\n",
+    "        mlflow.log_metric(\"gini_train\", gini_train)\n",
+    "        mlflow.log_metric(\"gini_test\", gini_test)\n",
+    "        mlflow.log_metric(\"f_score_train\", f_score_train)\n",
+    "        mlflow.log_metric(\"f_score_test\", f_score_test)\n",
     "\n",
-    "    # mlflow log metrics\n",
-    "    mlflow.log_metric(\"gini_train\", gini_train)\n",
-    "    mlflow.log_metric(\"gini_test\", gini_test)\n",
-    "    mlflow.log_metric(\"f_score_train\", f_score_train)\n",
-    "    mlflow.log_metric(\"f_score_test\", f_score_test)\n",
+    "        #________________________________________________________________________\n",
     "\n",
-    "    #________________________________________________________________________\n",
-    "\n",
-    "    mlflow.end_run()\n",
-    "    \n",
-    "    print(f'success_run_{shift}')"
+    "        mlflow.end_run()\n",
+    "        \n",
+    "        print(f'success_run_b_{shift_backwrd}_f_{shift_frwrd}')"
    ]
   }
  ],
