--- a/scripts_analytical/2_4_model_train_1d.ipynb
+++ b/scripts_analytical/2_4_model_train_1d.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 44,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +62,8 @@
     "with open(\"params.yml\", 'r') as file:\n",
     "    params = yaml.safe_load(file)\n",
     "\n",
-    "root_path = '/Users/cotangentofzero/Data_science/trading_project/'\n",
+    "root_path = params['root_path']\n",
     "filepath_input = root_path + 'data/raw_data/'\n",
-    "\n",
     "\n",
     "feature_cols = ['close_price','n_trades','base_volume','buy_base','vol_per_trade']\n",
     "\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,13 +234,8 @@
     "feature_cols = feature_cols\n",
     "delta_cols = [col for col in df.columns if 'delta' in col]\n",
     "\n",
-    "#select_состояние\n",
     "df_event = df[dt_cols + feature_cols + ['target']]\n",
-    "\n",
-    "#select_изменение_состояния\n",
     "df_period = df[dt_cols + delta_cols + ['target']]\n",
-    "\n",
-    "#select_обучаяющая_выборка\n",
     "df_model = df[delta_cols + ['target']]"
    ]
   },
